# boat_detector

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  algorithm.cpp  algorithm.hpp  info.txt  utils.cpp  utils.hpp
src/: info.txt  main.cpp
